# minhaserigrafia

./: README.md  pyproject.toml
app/: main.py
app/errors/: bad_request_error.py  base_error.py  forbidden_error.py  internal_error.py  not_found_error.py  unauthorized_error.py
app/errors/codes/: bad_request_error_codes.py  forbidden_error_codes.py  internal_error_codes.py  not_found_error_codes.py  unauthorized_error_codes.py
app/errors/handler/: error_handler.py
app/errors/models/: base_error_code.py  error_model.py
