[project]
name = "minhaserigrafia"
version = "1.0.0"
description = "Projeto para gerenciar a produção de uma serigrafia."
authors = [
    {name = "Rafael Ribeiro",email = "ribeiroribas30@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
